fixed some contrast issues

--- a/chamber/styles/discover-small.css
+++ b/chamber/styles/discover-small.css
@@ -95,8 +95,9 @@ button {
   display: block;
   margin: 1rem auto;
 }
-button:hover{
+.cards button:hover{
   background-color: var(--secondary-color);
+  color: white;
 }
 
 
